--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css" />
 
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
+
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
@@ -31,6 +35,10 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
   <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+
+
 </head>
 
 <body>
@@ -108,7 +116,7 @@
                     </div>
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
-                        <p><span class="title-s">Name: </span> <span><b>Samyak kJain</b></span></p>
+                        <p><span class="title-s">Name: </span> <span><b>Samyak Jain</b></span></p>
                         <p><span class="title-s">Profile: </span> <span>Full stack developer</span></p>
                         <p><span class="title-s">Email: </span> <span><a href="mailto:samyakjain0512@gmail.com"><b>samyakjain0512@gmail.com<i class="fa-solid fa-arrow-up-right-from-square"></i></a></span></p>
                         <p><span class="title-s">Phone: </span> <span><a href="tel:8800699891"><b>8800699891<i class="fa-solid fa-arrow-up-right-from-square"></i></b></a></span></p>
@@ -513,12 +521,12 @@
                   <div class="testimonial-box">
                     <div class="author-test">
                       <img src="assets/img/testimonial-2.jpg" alt="" class="rounded-circle b-shadow-a">
-                      <span class="author">Xavi Alonso</span>
+                      <span class="author">Chhillar Homes</span>
                     </div>
                     <div class="content-test">
                       <p class="description lead">
-                        Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Lorem ipsum dolor sit amet,
-                        consectetur adipiscing elit.
+                        Very delighted to be working with Samyak Jain as Team Lead for developing and executing of Chhillar Homes Dedicated Website.
+                                                -Vinod Mishra
                       </p>
                     </div>
                   </div>
@@ -528,12 +536,12 @@
                   <div class="testimonial-box">
                     <div class="author-test">
                       <img src="assets/img/testimonial-4.jpg" alt="" class="rounded-circle b-shadow-a">
-                      <span class="author">Marta Socrate</span>
+                      <span class="author">Lapcompute.com</span>
                     </div>
                     <div class="content-test">
                       <p class="description lead">
-                        Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Lorem ipsum dolor sit amet,
-                        consectetur adipiscing elit.
+                        Amazing work and had a pleasure of the experience with Samyak Jain. He provides the work and fine product with dedication and in ample time. 
+                                                    -Adarsh Kumar
                       </p>
                     </div>
                   </div>
@@ -550,6 +558,8 @@
       </div>
     </div><!-- End Testimonials Section -->
 
+
+      <!-- CERTIFICATE SECTION END -->
     <!-- ======= Blog Section ======= -->
     <section id="blog" class="blog-mf sect-pt4 route">
       <div class="container">
@@ -683,6 +693,8 @@
                       <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                         <div class="row">
                           <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light" data-type="HORIZONTAL" data-vanity="samyak-jain-55713125a" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://in.linkedin.com/in/samyak-jain-55713125a?trk=profile-badge">Samyak Jain</a></div>
+                              <div><h4 class="text-primary text-left">OR</h4></div>
+                              
                           <div class="col-md-12 mb-3">
                             <div class="form-group">
                               <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -723,10 +735,7 @@
                     </div>
                     <div class="more-info">
                       <p class="lead">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorum dolorem soluta quidem
-                        expedita aperiam aliquid at.
-                        Totam magni ipsum suscipit amet? Autem nemo esse laboriosam ratione nobis
-                        mollitia inventore?
+                        My name is Samyak Jain. I have spend all my life in Delhi. I'm completed my Bachelor’s in Computer Application from IITM Janakpuri.  I chose BCA as my career because it opened different fields and environments of my passion for me. My fields and expertise lie in System Programming like Java, Python, and Web-based Development. I have previously worked on projects based on Portfolio Web-D using React and AI. My strengths are my positive attitude, punctuality, and interpersonal skills. 
                       </p>
                       <ul class="list-ico">
                         <li><span class="bi bi-geo-alt"></span> Delhi,India</li>
@@ -750,7 +759,7 @@
         </div>
       </div>
     </section><!-- End Contact Section -->
-    <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light" data-type="HORIZONTAL" data-vanity="samyak-jain-55713125a" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://in.linkedin.com/in/samyak-jain-55713125a?trk=profile-badge">Samyak Jain</a></div>
+    <!-- <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light" data-type="HORIZONTAL" data-vanity="samyak-jain-55713125a" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://in.linkedin.com/in/samyak-jain-55713125a?trk=profile-badge">Samyak Jain</a></div> -->
               
   </main><!-- End #main -->
 
