--- a/blog-single.html
+++ b/blog-single.html
@@ -42,26 +42,22 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto " href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="#work">Work</a></li>
+          <li><a class="nav-link scrollto " href="#work">Projects</a></li>
           <li><a class="nav-link scrollto " href="#blog">Blog</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>Certificates</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
+              <li><a href="https://www.coursera.org/account/accomplishments/certificate/Y28L39UYYACC">Introduction to Cloud Computing<i class="fa-solid fa-square-up-right"></i></a></li>
+              <li><a href="https://www.coursera.org/account/accomplishments/certificate/66PQVEBV6EFP">Full-stack Web Development with React Specialization <i class="fa-solid fa-square-up-right"></i></a></li>
+              <li><a href="https://www.coursera.org/account/accomplishments/specialization/certificate/EXRCRJ7CNSKN">Server-side Development with NodeJS, Express and MongoDB<i class="fa-solid fa-square-up-right"></i></a></li>
+              <li><a href="https://www.coursera.org/account/accomplishments/certificate/VGTD9DEYCDQX"> Front-End Web Development with React<i class="fa-solid fa-square-up-right"></i></a></li>
+              <li><a href="https://www.coursera.org/account/accomplishments/certificate/29ZV9E8LPA7E">  Introduction to HTML5<i class="fa-solid fa-square-up-right"></i></a></li>
+              <li><a href="https://www.coursera.org/account/accomplishments/certificate/ZY6QBELYJFE5">  Introduction to CSS3<i class="fa-solid fa-square-up-right"></i></a></li>
+              <li><a href="https://www.coursera.org/account/accomplishments/certificate/A8H3CHSCDS4U"> Interactivity with JavaScript<i class="fa-solid fa-square-up-right"></i></a></li>
+              <!-- <li><a href="https://www.coursera.org/account/accomplishments/certificate/VGTD9DEYCDQX"> Front-End Web Development with React</a></li> -->
+
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
