--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="projects/portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -415,7 +415,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="projects/portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -439,7 +439,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="projects/portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -463,7 +463,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="projects/portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -487,7 +487,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="projects/portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -511,7 +511,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="projects/portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
