--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/DODO.png)">
+  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/DODO2.png)">
     <div class="overlay-itro"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
