--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="hero-title mb-4">I am <span style="color: #af78d7;">Samyak Jain</span>
+          <h1 class="hero-title mb-4">I am <span style="color: #af78d7;">Samyak Jain.</span>
           </h1>
           <p class="hero-subtitle">
             <span class="typed" data-typed-items="Website Designer, Frontend Developer, Backend Developer, Fullstack Developer, Digital Marketer, Content Designer">
